--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/TestScript02/selenium-2.40.0/libs/commons-io-2.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
